--- a/public/styles/tweetContainer.css
+++ b/public/styles/tweetContainer.css
@@ -23,8 +23,15 @@ border-top: 4px solid #545149;
 .tweets div {
   display:flex;
   align-self: flex-start;
-  justify-content: space-between;
+ justify-content: space-between; 
+
+ flex-wrap:wrap;
   
+}
+
+.tweets div img {
+  display:flex;
+  align-content: flex-end;
 }
 
 .tweets footer {
@@ -51,6 +58,18 @@ border-top: 4px solid #545149;
   justify-content: space-between;
 }
 
+.avatar{
+  width: 60px;
+  height:60px;
+  margin-top: 13px;
+  margin-right: 10px;
+  padding: 0px;
+}
+
+.name {
+  display:flex;
+  flex-grow:4;
+}
 
 .username {
   color: lightgray;
