--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -37,3 +37,10 @@ button {
 form div {
  margin-left: auto;
 }
+
+.error {
+  color: red;
+  font-size: 20px;
+  display:flex;
+  justify-content: center;
+}
