--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,14 +1,6 @@
 header {
-  display: flex;
-  height: 400px;
-  width: 100%;
-  position: absolute;
-  justify-content: center;
-  align-items:center;
-  flex-direction: column;
   background-image: url("https://www.transparenttextures.com/patterns/60-lines.png");
-  padding:300px;
-  z-index: -1;
+  text-align:center
 }
 
 header h2 {
